fixing z-index

--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -44,6 +44,7 @@ button {
 canvas{
   pointer-events: none;
   position: relative;
+  z-index: z('canvas');
 }
 
 img {
